<resources>
    <string name="app_name">Act2_Calculator</string>
    <string name="btnHW">72dp</string>
    <string name="CODERIST">CODERIST</string>
    <string name="imgDesc">Coderist Logo</string>
    <string name="Clear">C</string>
    <string name="bckspc">⌫</string>
    <string name="Percent">%</string>
    <string name="Div">÷</string>
    <string name="Mult">x</string>
    <string name="Plus">+</string>
    <string name="Minus">-</string>
    <string name="Dot">.</string>
    <string name="Equals">=</string>
    <string name="rotate">↺</string>
    <string name="n0">0</string>
    <string name="n1">1</string>
    <string name="n2">2</string>
    <string name="n3">3</string>
    <string name="n4">4</string>
    <string name="n5">5</string>
    <string name="n6">6</string>
    <string name="n7">7</string>
    <string name="n8">8</string>
    <string name="n9">9</string>
    <string name="n">C</string>
    <string name="error_evaluating_expression">Error evaluating expression</string>
    <string name="invalid_expression_ends_with_operator">Invalid expression: ends with an operator</string>
    <string name="division_leads_to_infinity">Division leads to Infinity</string>
    <string name="you_cannot_divide_by_zero">You cannot divide by zero</string>

</resources>