<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    style="@style/MainLayout">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/solution"
        android:text=""
        android:textSize="76sp"
        android:textAlignment="textEnd"
        android:layout_margin="16dp"
        android:layout_above="@+id/buttonslayout"
        style="@style/TextviewStyle" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/result"
        android:text=""
        android:textSize="36sp"
        android:textAlignment="textEnd"
        android:layout_margin="16dp"
        android:layout_above="@+id/solution"
        style="@style/TextviewStyle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/buttonslayout"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="9dp"
            android:paddingEnd="9dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnclear"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:text="@string/Clear"
                style="@style/FuncButtonStyle"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnbckspc"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:text="@string/bckspc"
                style="@style/FuncButtonStyle"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnmod"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:text="@string/Percent"
                style="@style/OpeButtonStyle"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btndivide"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:text="@string/Div"
                style="@style/OpeButtonStyle"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="9dp"
            android:paddingEnd="9dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn7"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:text="@string/n7"
                style="@style/MainButtonStyle"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn8"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:text="@string/n8"
                style="@style/MainButtonStyle"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn9"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:text="@string/n9"
                style="@style/MainButtonStyle"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnmulti"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:textSize="25sp"
                android:text="@string/Mult"
                style="@style/OpeButtonStyle"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="9dp"
            android:paddingEnd="9dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn4"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:text="@string/n4"
                style="@style/MainButtonStyle"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn5"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:text="@string/n5"
                style="@style/MainButtonStyle"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn6"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:text="@string/n6"
                style="@style/MainButtonStyle"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnminus"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:text="@string/Minus"
                style="@style/OpeButtonStyle"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="9dp"
            android:paddingEnd="9dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn1"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:text="@string/n1"
                style="@style/MainButtonStyle"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn2"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:text="@string/n2"
                style="@style/MainButtonStyle"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn3"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:text="@string/n3"
                style="@style/MainButtonStyle"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnplus"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:text="@string/Plus"
                style="@style/OpeButtonStyle"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="9dp"
            android:paddingEnd="9dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnrot"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:text="@string/rotate"
                style="@style/FuncButtonStyle"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn0"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:text="@string/n0"
                style="@style/MainButtonStyle"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btndot"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:text="@string/Dot"
                style="@style/MainButtonStyle"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btneqls"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:text="@string/Equals"
                style="@style/OpeButtonStyle"/>
        </LinearLayout>


    </LinearLayout>


</RelativeLayout>